# wasm-nextjs-project

./: README.md
next-project/: next.config.ts  package-lock.json  package.json  tsconfig.json
next-project/src/app/api/tree/: route.ts
next-project/src/app/wasm/: page.tsx
next-project/src/wasm_pkg/: tree_wasm.d.ts  tree_wasm.js  tree_wasm_bg.wasm  tree_wasm_bg.wasm.d.ts  tree_wasm_node.d.ts  tree_wasm_node.js  tree_wasm_node_bg.wasm
next-project/src/workers/: tree.worker.ts
rust-project/: Cargo.toml
rust-project/src/: lib.rs  tree_builder.rs
