[package]
name = "tree_wasm_node"
version = "0.1.0"
edition = "2024"
description = "A high-performance WASM library to build log trees"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
